core/pkg/opaprocessor/testdata/regocelparity/rules/pod-security-admission-restricted-applied-2/test/test3/input/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-restricted-namespace
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.25
